--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -148,30 +148,23 @@ body {
     }
 }
 
-main,
-aside {
+main {
     padding: 1rem;
+    flex-grow: 1;
+    order: 2;
+    max-width: 100%;
     @media($desktop) {
         padding: 2rem;
     }
 }
 
-main {
-    flex-grow: 1;
-    order: 2;
-    max-width: 100%;
-}
-
 aside {
+    padding: 0.5rem 1rem;
     position: relative;
     background: darken($paleblue, 16%);
 
-    @media($max-mobile) {
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-    }
-
     @media($desktop) {
+        padding: 0 2rem;
         flex-basis: $sidebarWidth - 2rem;
         flex-shrink: 0;
         order: 1;
@@ -183,12 +176,12 @@ aside {
     }
 
     .inner {
-        padding: -1rem 1rem 1rem;
         z-index: 1;
         @media($desktop) {
             top: 2rem;
             padding: 1rem;
             position: sticky;
+            height: calc(100vh - 3rem);
         }
     }
 
@@ -202,7 +195,7 @@ aside {
             border-radius: 100%;
             display: inline-block;
             overflow: hidden;
-            width: 2.75rem;
+            width: 2.4rem;
         }
 
         @media($desktop) {
@@ -210,7 +203,7 @@ aside {
             margin: 0 0 1rem 0;
             img {
                 display: block;
-                width: 6rem;
+                width: 5.4rem;
             }
         }
     }
@@ -236,10 +229,9 @@ aside {
     }
 
     h3 {
-        @extend h2;
         display: inline-block;
         text-transform: uppercase;
-        margin-bottom: 0.75rem !important;
+        margin-bottom: 0.5rem !important;
 
         @media($desktop) {
             display: block;
@@ -247,6 +239,7 @@ aside {
 
         a {
             color: white !important;
+            text-decoration: none;
         }
     }
 
@@ -261,13 +254,24 @@ aside {
     }
 }
 
-// [class*="icono"] {
-//     *,
-//     *:before,
-//     *:after {
-//         box-sizing: content-box !important;
-//     }
-// }
+.credits {
+    display: none;
+    font-size: 75%;
+    position: absolute;
+    bottom: 0.5rem;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: rgba(white, 0.33);
+
+    a:not(:hover) {
+        text-decoration: none;
+    }
+
+    @media($desktop) {
+        display: block;
+    }
+}
 
 .button {
     display: inline-block;
@@ -321,7 +325,7 @@ h2 {
     margin: 0 0 1rem;
 
     @media ($desktop) {
-        font-size: 2.32rem;
+        font-size: 2.24rem;
         word-spacing: 0.2rem;
     }
 
@@ -336,7 +340,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.4rem;
+    font-size: 1.48rem;
     text-transform: uppercase;
     margin: 0 0 1rem;
     color: $paleblue;
@@ -1182,14 +1186,38 @@ code {
 
     .tags {
         font-size: 0.88rem;
+        li {
+            position: relative;
+            &::after {
+                display: none;
+            }
+        }
         a {
-            opacity: 0.5;
+            opacity: 0.33;
+            padding: 0.2rem 0.36rem;
             text-decoration: none;
             user-select: none;
+            display: inline-block;
             &:hover {
                 opacity: 1;
-                text-decoration: underline;
                 color: white;
+                transform: scale(1.1);
+
+                // &::before {
+                //     content: "";
+                //     position: absolute;
+                //     left: 50%;
+                //     top: 50%;
+                //     transform: translate3d(-50%, -50%, 0);
+                //     display: block;
+                //     // background: rgba(white, 0.1);
+                //     border: 1px solid rgba(white, 0.2);
+                //     border-radius: 100%;
+                //     width: 100%;
+                //     height: 0;
+                //     padding-top: 100%;
+                //     pointer-events: none;
+                // }
             }
         }
     }
