resize mage and add image size

--- a/input/_includes/aside.njk
+++ b/input/_includes/aside.njk
@@ -2,7 +2,7 @@
 
 <div class="inner">
     <a href="{{ url }}" class="rolandtoth">
-        <img src="{{ cfg.paths.images }}roland-toth-pal.jpg" alt="">
+        <img src="{{ cfg.paths.images }}roland-toth-pal.jpg" alt="" width="90" height="90">
     </a>
 
     <h3>
