--- a/input/_includes/aside.njk
+++ b/input/_includes/aside.njk
@@ -18,5 +18,5 @@
         {{ pt.posttags(collections.tagList | sort(false, false)) }}
     </div>
 
-    <p class="credits">Made with <a href="{{ cfg.links.eleventy }}" target="_blank">Eleventy</a> | Source @ <a href="{{ cfg.links.githubUrl }}" target="_blank">GitHub</a></p>
+    <p class="credits">Made with <a href="{{ cfg.links.eleventy }}" target="_blank">Eleventy</a> | Source @ <a href="{{ cfg.links.githubSrc }}" target="_blank">GitHub</a></p>
 </div>
