new post, titlecase tags, highlight excerpt

--- a/input/_includes/layouts/@post.njk
+++ b/input/_includes/layouts/@post.njk
@@ -19,7 +19,7 @@
         </ul>
 
         <div class="excerpt">
-            <strong>{{ excerpt | md | safe }}</strong>
+            {{ excerpt | md | safe }}
         </div>
 
         {% if bgImg and bgImgUrl %}
