--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,6 +70,7 @@ img {
 
 ul, ol {
     margin-top: 0;
+    margin-bottom: 1.75rem;
 }
 
 .m-none {
@@ -434,7 +435,7 @@ h3 {
     }
 
     @media($desktop) {
-        padding: 6rem 2rem 2.4rem 6rem;
+        padding: 6rem 2rem 3rem 6rem;
         margin: -6.1rem -2rem 2.4rem -6rem;
 
         &::before,
@@ -462,7 +463,7 @@ h3 {
 
         &::after {
             background-color: #f2f2f2;
-            background-color: rgba(darken($paleblue, 25%), 0.598);
+            background-color: rgba(darken($paleblue, 25%), 0.42);
         }
     }
 
@@ -481,7 +482,15 @@ h3 {
         margin-bottom: 0;
     }
     @media($desktop) {
-        font-size: 1.16rem;
+        font-size: 1.2rem;
+        line-height: 1.8;
+        margin-left: 0.5rem;
+        p {
+            display: inline-block;
+            @include highlightLines(0.5rem, rgba(darken($paleblue, 25%), 0.75));
+            padding-top: 0.25rem;
+            padding-bottom: 0.25rem;
+        }
     }
 }
 
@@ -1202,22 +1211,6 @@ code {
                 opacity: 1;
                 color: white;
                 transform: scale(1.1);
-
-                // &::before {
-                //     content: "";
-                //     position: absolute;
-                //     left: 50%;
-                //     top: 50%;
-                //     transform: translate3d(-50%, -50%, 0);
-                //     display: block;
-                //     // background: rgba(white, 0.1);
-                //     border: 1px solid rgba(white, 0.2);
-                //     border-radius: 100%;
-                //     width: 100%;
-                //     height: 0;
-                //     padding-top: 100%;
-                //     pointer-events: none;
-                // }
             }
         }
     }
