--- a/input/tagpages.njk
+++ b/input/tagpages.njk
@@ -26,7 +26,7 @@ permalink: /tags/{{ tag | slug | lower }}/
 {% block metaTitle %}{{ ("Tag: " + postTags[tag].title) | pageTitle }}{% endblock %}
 
 {% block main %}
-  <h1>{{ tag }}</h1>
+  <h1>{{ postTags[tag].title }}</h1>
 
   {% set taglist = collections[tag] %}
   {% for p in taglist | reverse %}
