--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -120,22 +120,6 @@ body {
     }
 }
 
-.page-content {
-    @media($desktop) {
-        max-width: 60rem;
-        padding-left: 4rem;
-    }
-}
-
-.article-body {
-    > img,
-    > .cp_embed_wrapper,
-    > iframe {
-        display: block;
-        margin-bottom: 1.25rem;
-    }
-}
-
 .main-content {
     background: white;
     display: flex;
@@ -150,17 +134,25 @@ body {
 }
 
 main {
-    padding: 1rem;
     flex-grow: 1;
     order: 2;
     max-width: 100%;
-    @media($desktop) {
-        padding: 2rem;
+    position: relative;
+
+    body.type-post & {
+        @media($desktop) {
+            > .mid {
+                perspective-origin: top;
+                perspective: 3px;
+                height: 100vh;
+                overflow-x: hidden;
+            }
+        }
     }
 }
 
 aside {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.5rem;
     position: relative;
     background: darken($paleblue, 16%);
 
@@ -307,7 +299,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 1.5rem;
     font-family: "BenchNine", sans-serif;
-    font-size: 2.4rem;
+    font-size: 2.5rem;
     line-height: 1.125;
     text-transform: uppercase;
     margin-bottom: 1rem;
@@ -361,9 +353,11 @@ h3 {
     user-select: none;
     position: relative;
     margin-top: 1rem;
+    margin-bottom: 2rem;
 
     @media($desktop) {
         text-align: center;
+        margin-bottom: 0;
     }
 
     ul {
@@ -424,10 +418,41 @@ h3 {
     }
 }
 
+.left-offset {
+    padding: 0 1.5rem;
+    @media($desktop) {
+        padding-left: 6rem !important;
+    }
+}
+
+.top-wrap {
+    padding: 1.75rem 1.5rem 1.25rem;
+
+    body:not(.type-post) & {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    @media($desktop) {
+        padding: 6rem 2rem 2rem 0;
+    }
+
+    &:empty {
+        display: none;
+    }
+}
+
+.parallax {
+    @media($desktop) {
+        transform: translateZ(-1px) scale(1.338);
+        transform-origin: top;
+    }
+}
+
 .article-top {
+    @extend .top-wrap;
+
     position: relative;
-    padding: 4.5rem 1rem 1rem;
-    margin: -4.5rem -1rem 1.25rem;
 
     @media($max-tablet) {
         background-image: none !important;
@@ -435,8 +460,7 @@ h3 {
     }
 
     @media($desktop) {
-        padding: 6rem 2rem 3rem 6rem;
-        margin: -6.1rem -2rem 2.4rem -6rem;
+        padding-bottom: 4rem;
 
         &::before,
         &::after {
@@ -448,10 +472,6 @@ h3 {
             top: 0;
             display: block;
             pointer-events: none;
-            @media($desktop) {
-                right: auto;
-                width: calc(100vw - #{$sidebarWidth} + 2rem);
-            }
         }
 
         &::before {
@@ -463,7 +483,7 @@ h3 {
 
         &::after {
             background-color: #f2f2f2;
-            background-color: rgba(darken($paleblue, 25%), 0.42);
+            background-color: rgba(darken($paleblue, 25%), 0.33);
         }
     }
 
@@ -473,6 +493,23 @@ h3 {
         @media($desktop) {
             color: white !important;
         }
+    }
+}
+
+.article-body {
+    background: white;
+    position: relative;
+    padding: 1.5rem;
+    
+    > img,
+    > .cp_embed_wrapper,
+    > iframe {
+        display: block;
+        margin-bottom: 1.25rem;
+    }
+    
+    @media($desktop) {
+        padding: 3rem 2rem 2rem 0;
     }
 }
 
@@ -494,8 +531,26 @@ h3 {
     }
 }
 
+.mid {
+    max-width: 60rem;
+    padding-right: 2rem;
+}
+
 h1, .excerpt {
     max-width: 45rem;
+}
+
+main > .mid {
+    padding-bottom: 1rem;
+
+    @media($desktop) {
+        padding-bottom: 3rem;
+    }
+
+    body.type-post & {
+        max-width: 100%;
+        padding: 0 !important;
+    }
 }
 
 .featured-image {
@@ -546,10 +601,8 @@ article {
     padding: 2rem 0;
     border-bottom: 1px solid $bordercolor;
 
-    .page-content & {
-        &:first-of-type {
-            padding-top: 0;
-        }
+    &:first-of-type {
+        padding-top: 0;
     }
 
     h2 {
@@ -658,14 +711,24 @@ article {
 }
 
 .fbx-wrap {
-    position: relative;
+    position: sticky;
     top: 0;
-    z-index: 30;
-    margin: -1.06rem -1rem 1.5rem;
+    margin-left: -1.5rem;
+    width: 100vw;
     border-bottom: 1px solid $bordercolor;
+    backface-visibility: hidden;
+    z-index: 30;
 
+    body.type-post & {
+        margin: 0;
+    }
+    
     @media($desktop) {
-        margin: -2rem -2rem 2rem;
+        position: absolute;
+        right: 0;
+        left: 0;
+        margin: 0;
+        width: 100%;
         border: none;
     }
 
@@ -673,13 +736,15 @@ article {
         transform: scale(0.7);
         display: inline-block;
         position: absolute;
-        left: 0.7rem;
-        top: 0.36rem;
+        left: 1rem;
         z-index: 24;
         color: rgba(white, 0.5);
+        margin-top: 0.33rem;
+
         @media($desktop) {
             top: 0.88rem;
             left: 2.5rem;
+            margin: 0;
         }
     }
 
@@ -693,7 +758,7 @@ article {
         border-bottom: 1px solid transparent;
         line-height: 3rem;
         height: 3rem;
-        padding: 0 0 0 3rem;
+        padding: 0 0 0 3.75rem;
         z-index: 10;
         background: darken($paleblue, 10%);
         color: white;
@@ -822,7 +887,7 @@ article {
 
     li {
         background: white;
-        padding-left: 1rem;
+        padding-left: 3.75rem;
         a {
             margin-top: -1px;
             border-top: 1px solid rgba($bordercolor, 0.5);
@@ -905,8 +970,8 @@ blockquote {
 
 @media ($tablet) {
     ::-webkit-scrollbar {
-        width: 7px;
-        height: 7px;
+        width: 12px;
+        height: 12px;
 
         &-track {
             background: transparent;
@@ -1103,10 +1168,8 @@ code {
     @include listWithSeparator($spacing: 0.33rem, $separator: "\2022", $color: rgba(white, 0.5));
     position: relative;
     top: -0.5rem;
-    opacity: 084;
     @media($desktop) {
         top: -1.5rem;
-        opacity: 0.5;
     }
 }
 
@@ -1152,19 +1215,17 @@ code {
         padding-left: 2rem;
     }
 
-    body.page-tags .page-content & {
+    body.page-tags main & {
         @media ($tablet) {
             @include _fg(2, 0, 0);
             justify-content: center;
-            // text-align: center;
             overflow: hidden;
             outline: 3px solid white;
-            margin-left: -1rem;
+            margin-left: -0.75rem;
             outline-offset: -3px;
             li {
                 border: 1px solid $bordercolor;
                 border-width: 1px;
-                // transform: translate3d(1px, 1px, 0);
                 margin: -1px -1px 0 0;
                 &::after {
                     display: none;
@@ -1183,6 +1244,9 @@ code {
                 text-decoration: none;
                 transition: none;
             }
+        }
+        @media ($desktop) {
+            margin-left: -1rem;
         }
         @media ($hd) {
             @include _fg(3, 0, 0);
@@ -1233,29 +1297,13 @@ code {
 
 #comments {
     position: relative;
-    padding: 1.25rem 0 2rem;
-    z-index: 2;
-    margin-bottom: -2rem;
+    padding: 1.5rem 1.5rem 3rem;
+    margin-bottom: -1rem;
+    background: $codeBgColor;
     
     @media($desktop) {
-        margin-top: 1rem;
-        padding: 1.75rem 0 3rem;
-    }
-
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: -1rem; 
-        right: -1rem;
-        bottom: 0;
-        background: $codeBgColor;
-        z-index: -1;
-
-        @media($desktop) {
-            left: -6rem;
-            right: -50vw;
-        }
+        padding: 2rem 0 4rem;
+        margin-bottom: -3rem;
     }
 }
 
@@ -1263,4 +1311,4 @@ code {
     content: "";
     clear: both;
     display: table;
-  }
+}
