--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1033,7 +1033,7 @@ h3 {
   user-select: none;
   position: relative;
   margin-top: 1rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 1rem; }
   @media (min-width: 990px) {
     .pagination {
       text-align: center;
@@ -1076,7 +1076,7 @@ h3 {
       padding-left: 6rem !important; } }
 
 .top-wrap, .article-top {
-  padding: 1.75rem 1.5rem 1.25rem; }
+  padding: 1.5rem 1.5rem 1rem; }
   body:not(.type-post) .top-wrap, body:not(.type-post) .article-top {
     padding-left: 0;
     padding-right: 0; }
@@ -1088,7 +1088,7 @@ h3 {
 
 @media (min-width: 990px) {
   .parallax {
-    transform: translateZ(-1px) scale(1.338);
+    transform: translateZ(-1px) scale(1.34);
     transform-origin: top; } }
 
 .article-top {
@@ -1135,7 +1135,7 @@ h3 {
     margin-bottom: 1.25rem; }
   @media (min-width: 990px) {
     .article-body {
-      padding: 3rem 2rem 2rem 0; } }
+      padding: 3rem 0 2rem 0; } }
 
 .excerpt {
   margin: 1rem 0 0.5rem; }
@@ -1156,8 +1156,10 @@ h3 {
         padding-bottom: 0.25rem; } }
 
 .mid {
-  max-width: 60rem;
-  padding-right: 2rem; }
+  max-width: 60rem; }
+  @media (min-width: 990px) {
+    .mid {
+      padding-right: 2rem; } }
 
 h1, .excerpt {
   max-width: 45rem; }
@@ -1235,7 +1237,7 @@ article {
 .text-sm, blockquote cite, .date, .comment-count {
   font-size: 92%; }
 
-.text-faded, blockquote cite, .date, .comment-count, .post-tags {
+.text-faded, blockquote cite, .date, .post-tags {
   color: rgba(44, 50, 53, 0.64); }
 
 .prev-next {
@@ -1443,8 +1445,7 @@ article {
     backface-visibility: hidden;
     z-index: -1; }
   .post-list li {
-    background: white;
-    padding-left: 3.75rem; }
+    background: white; }
     .post-list li a {
       margin-top: -1px;
       border-top: 1px solid rgba(218, 218, 218, 0.5); }
@@ -1453,9 +1454,12 @@ article {
         padding-left: 6rem; } }
   .post-list a {
     display: block;
-    padding: 1rem 1rem 1rem 0;
+    padding: 1rem 1rem 1rem 3.75rem;
     color: #2c3235;
     text-decoration: none; }
+    @media (min-width: 990px) {
+      .post-list a {
+        padding-left: 0; } }
     .post-list a:hover h3 {
       text-decoration: underline; }
   .post-list p {
@@ -1489,12 +1493,13 @@ article {
   position: absolute;
   right: 2rem;
   top: 0;
+  margin-top: -0.6rem;
   z-index: 12; }
-  @media (max-width: 989px) {
-    .search-counter {
-      display: none; } }
   body.page-home .search-counter {
     color: rgba(44, 50, 53, 0.4); }
+  @media (min-width: 990px) {
+    .search-counter {
+      margin-top: 0; } }
 
 fbxhl.on {
   background: rgba(255, 235, 59, 0.4); }
@@ -1588,6 +1593,10 @@ pre {
   position: relative;
   margin-bottom: 1.5rem;
   font-size: 96%; }
+  @media (max-width: 989px) {
+    pre {
+      margin-left: -1.5rem;
+      margin-right: -1.5rem; } }
   pre code {
     display: block;
     padding: 1.25rem 1.5rem !important;
@@ -1605,6 +1614,9 @@ pre {
       opacity: 0.25;
       user-select: none;
       font-size: 1rem; }
+      @media (max-width: 989px) {
+        pre code.hljs::before {
+          display: none; } }
     pre code.hljs.language-javascript::before {
       content: "JavaScript"; }
     pre code.hljs.language-html::before {
