--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1089,7 +1089,8 @@ h3 {
 @media (min-width: 990px) {
   .parallax {
     transform: translateZ(-1px) scale(1.34);
-    transform-origin: top; } }
+    transform-origin: top;
+    transform-style: preserve-3d; } }
 
 .article-top {
   position: relative; }
@@ -1110,7 +1111,6 @@ h3 {
         display: block;
         pointer-events: none; }
       .article-top::before {
-        background-image: inherit;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat; }
