--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -446,12 +446,13 @@ h3 {
     @media($desktop) {
         transform: translateZ(-1px) scale(1.34);
         transform-origin: top;
+        transform-style: preserve-3d;
+        // backface-visibility: hidden;
     }
 }
 
 .article-top {
     @extend .top-wrap;
-
     position: relative;
 
     @media($max-tablet) {
@@ -475,7 +476,6 @@ h3 {
         }
 
         &::before {
-            background-image: inherit;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
