header background shorthand issue

--- a/input/_includes/layouts/@post.njk
+++ b/input/_includes/layouts/@post.njk
@@ -5,7 +5,7 @@
 {% block main %}
 
     <style>
-    .article-top::before{background:url({{ bgImg }});}
+    .article-top::before{background-image:url({{ bgImg }});}
     </style>
 
     <div class="parallax">
