--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -271,7 +271,8 @@ aside {
     border: 1px solid lighten($base, 50%);
     background: transparent;
     line-height: 1.1 !important;
-    padding: 0.64rem 1.4rem;
+    padding: 0.6rem 1.4rem;
+    border-radius: 2px;
     user-select: none;
     text-decoration: none;
 
