--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1004,7 +1004,7 @@ h1 {
       margin-bottom: 2.4rem; } }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.84rem;
   line-height: 1.25;
   margin: 1.25rem 0 1rem; }
   @media (min-width: 990px) {
@@ -1032,7 +1032,7 @@ h3 {
       font-size: 1.7rem; } }
 
 .content-maxwidth {
-  max-width: 42rem; }
+  max-width: 45rem; }
 
 .pagination {
   user-select: none;
@@ -1218,10 +1218,11 @@ article {
     float: right;
     text-decoration: none !important;
     color: #49616e;
-    margin-right: 0.125rem; }
+    margin-right: 0.125rem;
+    margin-top: 0.8rem; }
     @media (min-width: 990px) {
       article .comment-count {
-        margin-top: 0.2rem; } }
+        margin-top: 1.8rem; } }
     article .comment-count i {
       transform: scale(0.8); }
     article .comment-count em {
