--- a/input/404.njk
+++ b/input/404.njk
@@ -1,15 +1,10 @@
 ---
+title: 404
 permalink: 404.html
 sitemapIgnore: true
 ---
 {% extends 'layouts/@default.njk' %}
 
-{% block headerslot %}
-    <div>
-      <h1>404</h1>
-    </div>
-{% endblock %}
-
 {% block main %}
-  <p>Az oldal nem található.</p>
+  <p>The page you were looking for is not here.</p>
 {% endblock %}
