--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -167,8 +167,9 @@ aside {
         flex-shrink: 0;
         order: 1;
         text-align: center;
-        background-size: auto 100vh;
-        background-image: url("#{$images}/photo-1462556791646-c201b8241a94.webp");
+        // background-size: $sidebarWidth auto;
+        background-size: $sidebarWidth auto;
+        background-image: url("#{$images}/digital-art-963368.webp");
         background-attachment: fixed;
     }
 
